# cuda-projects

./: CMakeLists.txt  README.md
include/: common.hpp  convolution.cuh  cuda_utils.cuh  matrix_mul.cuh  reduction.cuh  vector_add.cuh
src/: common.cpp  convolution.cu  main.cpp  matrix_mul.cu  reduction.cu  vector_add.cu
